data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1087.wast
;; 8. **Test Description**:    - Construct a loop containing a complex `br_table` with mixed valid and out-of-bounds indices. This test will check for differing branching behaviors and confirm default target handling for all invalid indices.    - **Constraint Checked**: Handling multiple branching behaviors and default target execution in cases of mixed valid and out-of-bounds indices in `br_table`.

(assert_invalid
  (module
    (func $complex_br_table
      (block
        (loop $loop
          (br_table 0 1 2 0 3 4 0 $loop)
          ;; Unconditionally perform an action that is invalid.
          (i32.const 42)
          ;; Ensuring that if br_table fails to branch correctly, the wrong instructions are executed.
          (drop)
        )
      )
    )
  )
  "invalid default target for br_table"
)